[gd_scene load_steps=4 format=3 uid="uid://drlxrb1pn7xuy"]

[ext_resource type="Script" path="res://script/igui.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dg7cxi2ofvr38" path="res://icon.png" id="2_x0eq4"]
[ext_resource type="PackedScene" uid="uid://j2ny4o34p6vf" path="res://objects/Label.tscn" id="3"]

[node name="igui" type="CanvasLayer"]
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="stam" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="p1label" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3")]
layout_mode = 2

[node name="p1" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3")]
layout_mode = 2

[node name="time" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3")]
layout_mode = 2

[node name="p2" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3")]
layout_mode = 2

[node name="p2label" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3")]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_x0eq4")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "reset"

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button" to="." method="_on_button_pressed"]
